removed run status reason bullshit
